changed layout of sidebar for correct displaying on small screens

--- a/src/app/components/aside-menu/aside-menu.component.scss
+++ b/src/app/components/aside-menu/aside-menu.component.scss
@@ -9,7 +9,7 @@ $activeGreyColor: #2b2c2dfc;
 	}
 	&__list {
 		width: 100%;
-		overflow-y: auto;
+		height: 100%;
 	}
 	&__item {
 		margin: 0 0 5px 0;
