--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,5 +1,4 @@
-@import "primeng/resources/primeng.min.css";
-@import "primeicons/primeicons.css";
+
 @import '../../../../nullstyle/nullstyle.scss';
 .bar-button{
 	position: fixed;
@@ -26,7 +25,8 @@
 }
 :host ::ng-deep .custom-sidebar{
 	background-color: #9c9c9c;
-	top: 65px; 
+	top: 65px;
+	height: calc(100vh - 65px);
 	button{
 		border: none;
 		border-radius: 50%;
@@ -50,14 +50,13 @@
 .aside-menu{
 	&__container{
 		position: relative;
-		padding-top: 1px;
+		padding-bottom: 15px;
 		height: 100%;
 		background-color: #fff;
-		overflow: hidden;
+		overflow-y: auto;
 	}
 	&__list {
 		width: 100%;
-		padding-left: 40px;
 	}
 	&__item {
 		height: 53px;
@@ -98,6 +97,7 @@ font-size: 30px;
 }
 ::ng-deep .p-sidebar .p-sidebar-content {
 	padding: 0;
+	overflow-y: auto;
 }
 ::ng-deep .p-sidebar .p-sidebar-header{
 	padding: 12px;
@@ -108,4 +108,9 @@ color: #545454;
 }
 a{
 	color: #545454;
+}
+.text{
+	span{
+		margin-right: 10px;
+	}
 }
